# ha-kingspan-watchman-sensit

./: .gitignore  Changelog.md  Debugging.md  Info.md  LICENSE.rst  README.md  generate_manifest.py  hacs.json  pyproject.toml  test.py
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: code-coverage.yml  codeql.yml  create-manifest.yml  hacs.yml  hassfest.yml  main.yml  run-all-tests.yml
custom_components/kingspan_connect/: __init__.py  api.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py
custom_components/kingspan_connect/translations/: en.json
custom_components/kingspan_watchman_sensit/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  entity.py  manifest.json  quality_scale.yaml  sensor.py  switch.py
custom_components/kingspan_watchman_sensit/${workspaceFolder:fractured_json}/.cspell/: custom-dictionary-workspace.txt
custom_components/kingspan_watchman_sensit/translations/: de.json  en.json
icons/: icon.pxd
local/: deploy.sh
maintenance/: copy_to_local.sh  generate_manifest.py
migrate-these-tests/: test_config_flow.py
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_init.py  test_sensor.py  test_switch.py
to-migrate/kingspan_connect/: config_flow.py  const.py  manifest.json
to-migrate/kingspan_connect/translations/: en.json
to-migrate/tests/: __init__.py  conftest.py
