[tool.poetry]
authors = ["Jon Connell <python@figsandfudge.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
description = "Kingspan Connect Sensor integration for Home Assistant"
documentation = "https://github.com/masaccio/ha-kingspan-connect-sensor/blob/main/README.md"
license = "MIT"
name = "ha-kingspan-connect-sensor"
packages = [{include = "custom_components/kingspan_watchman_sensit"}]
readme = "README.md"
repository = "https://github.com/masaccio/ha-kingspan-connect-sensor"
version = "1.3.0"

[tool.poetry.dependencies]
async-timeout = "^4.0.2"
homeassistant = "^2022.12.4"
kingspan-connect-sensor = "^2.0.6"
python = "^3.9"
voluptuous = "^0.13.1"
pysnooper = "^1.1.1"

[tool.poetry.group.dev.dependencies]
async-property = "^0.2.1"
black = {version = "^22.12.0", allow-prereleases = true}
datetime = "^4.7"
pylama = "^8.4.1"
pytest-homeassistant-custom-component = "0.12.33"
pytest-mock = "^3.9.0"
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning --cov=custom_components/kingspan_watchman_sensit"
minversion = 6.0
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py39, py310, py311
[testenv]
allowlist_externals = poetry
commands_pre = poetry install --no-root --sync
commands = poetry run -vvv pytest --import-mode importlib
"""

# linter settings
[tool.pylama]
linters = "pylint,mccabe,pyflakes"
max_line_length = 100
skip = ".tox/*"

[tool.pylama.linter.pycodestyle]
format = "pylint"
ignore = "E203,E231,W503"

[tool.pylama.linter.mccabe]
max-complexity = 15

[tool.pylama.linter.pyflakes]
builtins = "_"
