[tool.poetry]
authors = ["Jon Connell <python@figsandfudge.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
description = "Kingspan Connect Sensor integration for Home Assistant"
documentation = "https://github.com/masaccio/ha-kingspan-connect-sensor/blob/main/README.md"
license = "MIT"
name = "ha-kingspan-connect-sensor"
packages = [{include = "custom_components/kingspan_watchman_sensit"}]
readme = "README.md"
repository = "https://github.com/masaccio/ha-kingspan-connect-sensor"
version = "1.6.5"

[tool.poetry.dependencies]
async-timeout = "^4.0.2"
homeassistant = "*"
kingspan-connect-sensor = "^3.0.3"
python = ">=3.11,<3.13"
voluptuous = "^0.13.1"

[tool.poetry.group.dev.dependencies]
async-property = "^0.2.1"
aiohttp = {version="^3.8.2", allow-prereleases = true}
black = {version = "^22.12.0", allow-prereleases = true}
datetime = "^4.7"
pylama = "^8.4.1"
pytest-homeassistant-custom-component = { git="https://github.com/MatthewFlamm/pytest-homeassistant-custom-component.git" }
pytest-mock = "^3.9.0"
toml = "^0.10.2"
pygithub = "^1.58.0"
pandas = "^2.0.2"
ruff = "^0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning --cov-report=html --cov-report=term-missing:skip-covered --cov-context=test --cov=custom_components/kingspan_watchman_sensit"
minversion = 6.0
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
  # Machine-generated files
  ".bootstrap/*",
  "src/numbers_parser/generated/*",
  # Third-party files not to lint
  "src/debug/lldbutil.py", # Tox
  ".tox/*",
]
fix = true
ignore = [
  "PLR2004", # Allow constant values
]
line-length = 100
select = [
  # Pyflakes including bugbears
  "F",
  "B", # Pycodestyle
  "E",
  "W", # isort
  "I", # PEP naming
  "N", # pyupgrade
  "UP", # Pylama
  "PL",
]
src = ["src", "tests"]
target-version = "py38"
unfixable = [
  "ERA", # do not autoremove commented out code
]

[tool.ruff.pylint]
max-statements = 100
max-branches = 20

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
