[project]
authors = [
    {name = "Jon Connell", email = "python@figsandfudge.com"},
]
description = "Kingspan Connect Sensor integration for Home Assistant"
documentation = "https://github.com/masaccio/ha-kingspan-connect-sensor/blob/main/README.md"
license = "MIT"
name = "ha-kingspan-connect-sensor"
readme = "README.md"
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
version = "1.6.12"
dependencies = [
  "async-timeout>=4.0.2",
  "homeassistant>=2025.2",
  "kingspan-connect-sensor>=3.1.0",
  "voluptuous>=0.13.1",
  "async-property>=0.2.1",
  "asyncio>=3.4.3",
]

[project.urls]
repository = "https://github.com/masaccio/ha-kingspan-connect-sensor"

[dependency-groups]
dev = [
  "aiohttp>=3.8.2",
  "black>=22.12.0",
  "datetime>=4.7",
  "pylama>=8.4.1",
  "pytest-homeassistant-custom-component",
  "pytest-mock>=3.9.0",
  "toml>=0.10.2",
  "pygithub>=1.58.0",
  "pandas>=2.0.2",
  "ruff>=0.1.0",
  "tzlocal>=5.3.1",
]

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning --cov-report=html --cov-report=term-missing:skip-covered --cov-context=test --cov=custom_components/kingspan_watchman_sensit --disable-socket --allow-unix-socket"
minversion = 6.0
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
  # Machine-generated files
  ".tox/*"
]
fix = true
ignore = [
  "PLR2004", # Allow constant values
]
line-length = 100
select = [
  # Pyflakes including bugbears
  "F",
  "B", # Pycodestyle
  "E",
  "W", # isort
  "I", # PEP naming
  "N", # pyupgrade
  "UP", # Pylama
  "PL",
]
src = ["src", "tests"]
target-version = "py312"
unfixable = [
  "ERA", # do not autoremove commented out code
]

[tool.ruff.per-file-ignores]
# "tests/**" = ["PLR2004", "S101", "D103", "ANN201", "ANN001"]
"tests/**" = ["S101"]

[tool.ruff.pylint]
max-statements = 100
max-branches = 20

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
